# SDLGame

./: .gitignore  CMakeLists.txt  Debugger.cpp  FunctionsToIntegrate.txt  README.md  main.cpp  pieces.cpp  position.cpp
Pieces/: IPiece.cpp  InvertedLPiece.cpp  LPiece.cpp  Piece.cpp  SPiece.cpp  SquarePiece.cpp  TPiece.cpp  ZPiece.cpp
data/: licenses.txt
headers/: Colors.h  Debugger.h  Game.h  GraphicManager.h  Piece.h  PieceFactory.h  oldPieces.cpp  oldPieces.h  pieceDatabase.h  pieces.h  position.h  timer.h
headers/Pieces/: TPiece.h
headers/pieces/: IPiece.h  InvertedLPiece.h  LPiece.h  Piece.h  SPiece.h  SquarePiece.h  ZPiece.h
headers/pieces/factories/: EasyPieceFactory.h  PieceFactory.h  StandardPieceFactory.h
sources/: Debugger.cpp  Game.cpp  GraphicManager.cpp  main.cpp  position.cpp
sources/pieces/: IPiece.cpp  InvertedLPiece.cpp  LPiece.cpp  Piece.cpp  SPiece.cpp  SquarePiece.cpp  TPiece.cpp  ZPiece.cpp
sources/pieces/factories/: EasyPieceFactory.cpp  StandardPieceFactory.cpp
